welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:2: error: value lenght is not a member of Array[Int]
  var max : Int = nums(nums.lenght - 1);
                            ^